--- a/notebooks/molecular_analysis/GBA1_ranking_analysis.ipynb
+++ b/notebooks/molecular_analysis/GBA1_ranking_analysis.ipynb
@@ -1466,7 +1466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "6bc4a48c",
    "metadata": {},
    "outputs": [
@@ -1577,6 +1577,25 @@
     "num_existing = len(existing_drug_indices)\n",
     "hit_indices_local = np.arange(num_existing, len(all_candidate_drug_indices))\n",
     "\n",
+    "# Highlight logic for NCGC00241326-01\n",
+    "special_id = \"NCGC00241326-01\"\n",
+    "special_global_idx = None\n",
+    "\n",
+    "# Identify index in hits_df (which aligns with new_drug_indices)\n",
+    "# hits_df was loaded/filtered in previous cells\n",
+    "search_col = 'Sample Data Type' if 'Sample Data Type' in hits_df.columns else 'Sample Name'\n",
+    "matches = hits_df[hits_df[search_col].astype(str).str.strip() == special_id]\n",
+    "\n",
+    "if len(matches) > 0:\n",
+    "    # Index in hits_df (0 to 72)\n",
+    "    idx_in_hits = matches.index[0]\n",
+    "    # Index in all_candidate_drug_indices\n",
+    "    special_global_idx = num_existing + idx_in_hits\n",
+    "    _logger.info(f\"Found special molecule {special_id} at rank index {special_global_idx}\")\n",
+    "else:\n",
+    "    _logger.warning(f\"Special molecule {special_id} not found in hits dataframe.\")\n",
+    "\n",
+    "\n",
     "# Plotting\n",
     "fig, axes = plt.subplots(len(scenarios), 1, figsize=(12, 5 * len(scenarios)))\n",
     "if len(scenarios) == 1: axes = [axes]\n",
@@ -1600,6 +1619,16 @@
     "    # Add scatter for visibility on the line\n",
     "    ax.scatter(hit_ranks, hit_scores, color='red', s=15, zorder=3, label='GBA1 Hits' if ax == axes[0] else \"\")\n",
     "    \n",
+    "    # Highlight Special\n",
+    "    if special_global_idx is not None:\n",
+    "        rank_pos = np.where(sorted_indices == special_global_idx)[0]\n",
+    "        if len(rank_pos) > 0:\n",
+    "            s_rank = rank_pos[0]\n",
+    "            s_score = scores[special_global_idx]\n",
+    "            \n",
+    "            ax.vlines(s_rank, ymin=min(sorted_scores), ymax=max(sorted_scores), color='blue', alpha=1.0, linewidth=2.0)\n",
+    "            ax.scatter(s_rank, s_score, color='blue', s=80, marker='*', zorder=4, label=f\"{special_id}\" if ax == axes[0] else \"\")\n",
+    "\n",
     "    ax.set_title(f\"Scenario: {name}\", fontsize=14)\n",
     "    ax.set_xlabel(\"Rank (Index)\", fontsize=12)\n",
     "    ax.set_ylabel(\"Score\", fontsize=12)\n",
@@ -1919,7 +1948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "2c5e7e78",
    "metadata": {},
    "outputs": [
@@ -2027,6 +2056,17 @@
     "    \"Parkinson Only\": pd_score_m\n",
     "}\n",
     "\n",
+    "# Special Highlighting\n",
+    "special_id = \"NCGC00241326-01\"\n",
+    "special_idx_merged = np.where(merged_ids == special_id)[0]\n",
+    "\n",
+    "if len(special_idx_merged) > 0:\n",
+    "    _logger.info(f\"Highligting special molecule: {special_id} at index {special_idx_merged[0]}\")\n",
+    "    special_idx = special_idx_merged[0]\n",
+    "else:\n",
+    "    _logger.warning(f\"Special molecule {special_id} not found in merged list.\")\n",
+    "    special_idx = None\n",
+    "\n",
     "fig, axes = plt.subplots(len(scenarios_merged), 1, figsize=(12, 5 * len(scenarios_merged)))\n",
     "if len(scenarios_merged) == 1: axes = [axes]\n",
     "\n",
@@ -2046,10 +2086,22 @@
     "    hit_ranks = np.where(is_hit_sorted)[0]\n",
     "    hit_scores_sorted = sorted_scores[is_hit_sorted]\n",
     "    \n",
-    "    # Add markers\n",
+    "    # Add markers for general hits\n",
     "    ax.vlines(hit_ranks, ymin=min(sorted_scores), ymax=max(sorted_scores), color='red', alpha=0.3, linewidth=0.5)\n",
     "    ax.scatter(hit_ranks, hit_scores_sorted, color='red', s=15, zorder=3, label='GBA1 Hits' if ax == axes[0] else \"\")\n",
     "    \n",
+    "    # Highlight Special Molecule\n",
+    "    if special_idx is not None:\n",
+    "        # Find where the special molecule is in the sorted list\n",
+    "        rank_pos = np.where(sorted_indices == special_idx)[0]\n",
+    "        if len(rank_pos) > 0:\n",
+    "            s_rank = rank_pos[0]\n",
+    "            s_score = scores[special_idx]\n",
+    "            \n",
+    "            ax.vlines(s_rank, ymin=min(sorted_scores), ymax=max(sorted_scores), color='blue', alpha=1.0, linewidth=2.0)\n",
+    "            ax.scatter(s_rank, s_score, color='blue', s=80, marker='*', zorder=4, label=f\"Hit: {special_id}\" if ax == axes[0] else \"\")\n",
+    "            _logger.info(f\"{name}: Special {special_id} Rank = {s_rank}/{len(scores)}\")\n",
+    "\n",
     "    # Formatting\n",
     "    ax.set_title(f\"Scenario: {name} (Ref: ChEMBL)\", fontsize=14)\n",
     "    ax.set_xlabel(\"Rank (Index)\", fontsize=12)\n",
