plots with neighborhood based filtering

--- a/notebooks/molecular_analysis/huntington_analysis.ipynb
+++ b/notebooks/molecular_analysis/huntington_analysis.ipynb
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "f4fd6592",
    "metadata": {},
    "outputs": [
@@ -899,6 +899,7 @@
     "\n",
     "# Create DataFrame for KG drugs\n",
     "kg_drugs_df = pd.DataFrame({\n",
+    "    'node_index': drug_nodes_df['node_index'].astype(int).values,\n",
     "    'Score_HTT': kg_scores_htt,\n",
     "    'Score_HD': kg_scores_hd,\n",
     "    'pubchem_activity_outcome': 'neurokg_background'\n",
@@ -1039,6 +1040,99 @@
     "    \"Ranking: Candidates vs NeuroKG Drugs (HD)\", \n",
     "    \"hd_ranking_curve_with_background.png\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "749373cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- Rank-vs-score curves excluding confounded drug neighborhoods in NeuroKG ---\n",
+    "# Reproduces the NeuroKG-background rank curves above, but filters out any *NeuroKG drug* node that is either:\n",
+    "#  (a) 1-hop connected to the \"Huntington disease\" node, OR\n",
+    "#  (b) within 2 hops of the HTT node (via any intermediate node types), based on the KG `edges` table.\n",
+    "\n",
+    "if not (\"nodes\" in globals() and \"edges\" in globals()):\n",
+    "    raise RuntimeError(\"Expected `nodes` and `edges` to be loaded (see earlier cells).\")\n",
+    "if \"filtered_bg_drugs\" not in globals():\n",
+    "    raise RuntimeError(\"Expected `filtered_bg_drugs` to exist (see NeuroKG background scoring cell).\")\n",
+    "if \"candidates_df\" not in globals():\n",
+    "    raise RuntimeError(\"Expected `candidates_df` to exist (see candidate scoring cell).\")\n",
+    "if \"htt_idx\" not in globals() or \"hd_idx\" not in globals():\n",
+    "    raise RuntimeError(\"Expected `htt_idx` and `hd_idx` to exist (see target-identification cell).\")\n",
+    "\n",
+    "# Drug index set (global indices)\n",
+    "drug_idx_set = set(nodes.loc[nodes[\"node_type\"].astype(str) == \"drug\", \"node_index\"].astype(int).values)\n",
+    "\n",
+    "def _one_hop_neighbors(seed_idx: int) -> set[int]:\n",
+    "    m = (edges[\"x_index\"] == seed_idx) | (edges[\"y_index\"] == seed_idx)\n",
+    "    if not m.any():\n",
+    "        return set()\n",
+    "    x = edges.loc[m, \"x_index\"].to_numpy()\n",
+    "    y = edges.loc[m, \"y_index\"].to_numpy()\n",
+    "    nbrs = set(np.concatenate([x, y]).astype(int))\n",
+    "    nbrs.discard(int(seed_idx))\n",
+    "    return nbrs\n",
+    "\n",
+    "def _within_two_hops(seed_idx: int) -> set[int]:\n",
+    "    n1 = _one_hop_neighbors(seed_idx)\n",
+    "    if len(n1) == 0:\n",
+    "        return set()\n",
+    "    m2 = edges[\"x_index\"].isin(n1) | edges[\"y_index\"].isin(n1)\n",
+    "    x2 = edges.loc[m2, \"x_index\"].to_numpy()\n",
+    "    y2 = edges.loc[m2, \"y_index\"].to_numpy()\n",
+    "    n_within2 = set(np.concatenate([x2, y2]).astype(int))\n",
+    "    n_within2.discard(int(seed_idx))\n",
+    "    return n_within2\n",
+    "\n",
+    "# --- Build exclusion set ---\n",
+    "hd_idx_int = int(hd_idx)\n",
+    "htt_idx_int = int(htt_idx)\n",
+    "\n",
+    "hd_1hop_drugs = _one_hop_neighbors(hd_idx_int) & drug_idx_set\n",
+    "htt_within2_drugs = _within_two_hops(htt_idx_int) & drug_idx_set\n",
+    "\n",
+    "excluded_drug_global_indices = hd_1hop_drugs | htt_within2_drugs\n",
+    "\n",
+    "_logger.info(f\"Huntington disease node idx: {hd_idx_int} | 1-hop drug neighbors: {len(hd_1hop_drugs)}\")\n",
+    "_logger.info(f\"HTT node idx: {htt_idx_int} | within-2-hop drug nodes: {len(htt_within2_drugs)}\")\n",
+    "_logger.info(f\"Excluding total unique NeuroKG drugs: {len(excluded_drug_global_indices)}\")\n",
+    "\n",
+    "if \"node_index\" not in filtered_bg_drugs.columns:\n",
+    "    raise RuntimeError(\"`filtered_bg_drugs` is missing `node_index` column; re-run the NeuroKG background scoring cell after updates.\")\n",
+    "\n",
+    "filtered_bg_drugs_excl = filtered_bg_drugs[~filtered_bg_drugs[\"node_index\"].astype(int).isin(excluded_drug_global_indices)].copy()\n",
+    "_logger.info(f\"Background drugs before exclusion: {len(filtered_bg_drugs)}\")\n",
+    "_logger.info(f\"Background drugs after exclusion: {len(filtered_bg_drugs_excl)}\")\n",
+    "\n",
+    "plot_cols = ['Score_HTT', 'Score_HD', 'pubchem_activity_outcome']\n",
+    "combined_ranking_df_excl_hd1hop_htt2hop = pd.concat(\n",
+    "    [candidates_df[plot_cols], filtered_bg_drugs_excl[plot_cols]],\n",
+    "    ignore_index=True,\n",
+    " )\n",
+    "\n",
+    "_logger.info(\n",
+    "    f\"Combined DataFrame (exclusions applied): {len(combined_ranking_df_excl_hd1hop_htt2hop)} rows\"\n",
+    " )\n",
+    "display(combined_ranking_df_excl_hd1hop_htt2hop.head())\n",
+    "\n",
+    "# Plot HTT (filtered)\n",
+    "plot_monotonically_decreasing(\n",
+    "    combined_ranking_df_excl_hd1hop_htt2hop,\n",
+    "    'Score_HTT',\n",
+    "    \"Ranking: Candidates vs NeuroKG Drugs (HTT)\\n(excluding HD 1-hop + HTT ≤2-hop drug neighbors)\",\n",
+    "    \"htt_ranking_curve_with_background_excl_hd1hop_htt2hop.png\",\n",
+    " )\n",
+    "\n",
+    "# Plot HD (filtered)\n",
+    "plot_monotonically_decreasing(\n",
+    "    combined_ranking_df_excl_hd1hop_htt2hop,\n",
+    "    'Score_HD',\n",
+    "    \"Ranking: Candidates vs NeuroKG Drugs (HD)\\n(excluding HD 1-hop + HTT ≤2-hop drug neighbors)\",\n",
+    "    \"hd_ranking_curve_with_background_excl_hd1hop_htt2hop.png\",\n",
+    " )"
    ]
   },
   {
@@ -1558,7 +1652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "561ca75c",
    "metadata": {},
    "outputs": [
@@ -1667,7 +1761,7 @@
     "    active_indices=active_bg_indices,\n",
     "    title=\"NeuroKG Background (HTT)\",\n",
     "    filename_suffix=\"neurokg_htt\"\n",
-    ")\n",
+    " )\n",
     "\n",
     "# Plot HD\n",
     "plot_recall_at_k(\n",
@@ -1675,7 +1769,35 @@
     "    active_indices=active_bg_indices,\n",
     "    title=\"NeuroKG Background (HD)\",\n",
     "    filename_suffix=\"neurokg_hd\"\n",
-    ")"
+    " )\n",
+    "\n",
+    "# --- Filtered Recall @ K (exclusions applied to NeuroKG background) ---\n",
+    "if \"combined_ranking_df_excl_hd1hop_htt2hop\" in globals():\n",
+    "    _logger.info(\"Computing Recall @ K for FILTERED NeuroKG background (exclusions applied)...\")\n",
+    "    combined_excl = combined_ranking_df_excl_hd1hop_htt2hop\n",
+    "    active_excl_mask = combined_excl['pubchem_activity_outcome'].astype(str).str.strip().str.lower() == 'active'\n",
+    "    active_excl_indices = np.where(active_excl_mask)[0]\n",
+    "    \n",
+    "    scores_htt_bg_excl = combined_excl['Score_HTT'].values\n",
+    "    scores_hd_bg_excl = combined_excl['Score_HD'].values\n",
+    "    \n",
+    "    plot_recall_at_k(\n",
+    "        scores=scores_htt_bg_excl,\n",
+    "        active_indices=active_excl_indices,\n",
+    "        title=\"NeuroKG Background (HTT) - Filtered\\n(exclude HD 1-hop + HTT ≤2-hop drug neighbors)\",\n",
+    "        filename_suffix=\"neurokg_htt_excl_hd1hop_htt2hop\",\n",
+    "    )\n",
+    "    \n",
+    "    plot_recall_at_k(\n",
+    "        scores=scores_hd_bg_excl,\n",
+    "        active_indices=active_excl_indices,\n",
+    "        title=\"NeuroKG Background (HD) - Filtered\\n(exclude HD 1-hop + HTT ≤2-hop drug neighbors)\",\n",
+    "        filename_suffix=\"neurokg_hd_excl_hd1hop_htt2hop\",\n",
+    "    )\n",
+    "else:\n",
+    "    _logger.warning(\n",
+    "        \"Skipping FILTERED NeuroKG Recall analysis: `combined_ranking_df_excl_hd1hop_htt2hop` missing (run the filtered rank-curve cell first).\"\n",
+    "    )"
    ]
   },
   {
@@ -1811,18 +1933,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.13"
   }
  },
  "nbformat": 4,
