--- a/notebooks/molecular_analysis/huntington_analysis.ipynb
+++ b/notebooks/molecular_analysis/huntington_analysis.ipynb
@@ -728,8 +728,9 @@
       ],
       "source": [
         "# Load Candidate Embeddings and Metadata\n",
-        "candidates_emb_path = PROJECT_ROOT / \"notebooks/molecular_analysis/huntington_candidates_embeddings.pt\"\n",
-        "candidates_csv_path = PROJECT_ROOT / \"notebooks/molecular_analysis/huntington_candidates_filtered_molecules_with_embeddings.csv\"\n",
+        "OUTPUT_DIR = conf.paths.notebooks.base_dir / conf.paths.notebooks.molecular_analysis.output_dir\n",
+        "candidates_emb_path = OUTPUT_DIR / conf.paths.notebooks.molecular_analysis.huntington_embeddings\n",
+        "candidates_csv_path = OUTPUT_DIR / conf.paths.notebooks.molecular_analysis.huntington_molecules_csv\n",
         "\n",
         "_logger.info(f\"Loading candidate embeddings from {candidates_emb_path}\")\n",
         "res_embeddings = torch.load(candidates_emb_path, map_location='cpu')\n",
