--- a/notebooks/molecular_analysis/molecular_analysis.ipynb
+++ b/notebooks/molecular_analysis/molecular_analysis.ipynb
@@ -171,24 +171,21 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Output directories\n",
-        "DRUGS_DIR = Path(\"data/neurokg/drugs\")\n",
-        "DRUGS_DIR.mkdir(parents=True, exist_ok=True)\n",
-        "\n",
-        "OUTPUT_DIR = Path(\"data/notebooks/molecular_analysis\")\n",
+        "# Output directories (from config)\n",
+        "OUTPUT_DIR = conf.paths.notebooks.base_dir / conf.paths.notebooks.molecular_analysis.output_dir\n",
         "OUTPUT_DIR.mkdir(parents=True, exist_ok=True)\n",
         "\n",
         "# Cache file paths\n",
-        "SMILES_CACHE_PATH = DRUGS_DIR / \"drug_smiles.csv\"\n",
-        "UNIMOL_CACHE_PATH = DRUGS_DIR / \"unimol_embeddings.pt\"\n",
-        "ADAPTER_PATH = conf.paths.checkpoint.base_dir / \"molecular_adapter.pt\""
+        "SMILES_CACHE_PATH = conf.paths.kg.base_dir / conf.paths.kg.smiles_cache\n",
+        "UNIMOL_CACHE_PATH = OUTPUT_DIR / conf.paths.notebooks.molecular_analysis.unimol_cache\n",
+        "ADAPTER_PATH = conf.paths.checkpoint.base_dir / conf.paths.checkpoint.molecular_adapter"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 2. Load PROTON Model and Drug Data"
+        "## Load PROTON Model and Drug Data"
       ]
     },
     {
@@ -373,7 +370,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 3. SMILES Data Collection\n",
+        "## SMILES Data Collection\n",
         "\n",
         "Fetch SMILES structures for drugs in NeuroKG from PubChem. Results are cached to avoid repeated API calls."
       ]
