Clean duplicated code

--- a/notebooks/molecular_analysis/GBA1_ranking_analysis.ipynb
+++ b/notebooks/molecular_analysis/GBA1_ranking_analysis.ipynb
@@ -51,11 +51,6 @@
         }
       ],
       "source": [
-        "import logging\n",
-        "import os\n",
-        "import sys\n",
-        "import glob\n",
-        "from pathlib import Path\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import torch\n",
@@ -65,31 +60,17 @@
         "from tqdm import tqdm\n",
         "from rdkit import Chem\n",
         "\n",
-        "# Setup logging\n",
-        "logging.basicConfig(level=logging.INFO, format=\"%(asctime)s - %(levelname)s - %(message)s\")\n",
-        "_logger = logging.getLogger(__name__)\n",
+        "# Setup environment using shared utilities\n",
+        "from utils import setup_notebook_environment, get_output_paths, get_inchi_key\n",
         "\n",
-        "# --- Path Setup ---\n",
-        "def _find_repo_root(start: Path) -> Path:\n",
-        "    start = start.resolve()\n",
-        "    for parent in (start, *start.parents):\n",
-        "        if (parent / \"pyproject.toml\").exists():\n",
-        "            return parent\n",
-        "    return start\n",
+        "PROJECT_ROOT, _logger = setup_notebook_environment(\"GBA1_ranking_analysis\")\n",
         "\n",
-        "PROJECT_ROOT = _find_repo_root(Path.cwd())\n",
-        "if str(PROJECT_ROOT) not in sys.path:\n",
-        "    sys.path.insert(0, str(PROJECT_ROOT))\n",
-        "    \n",
-        "# Change working directory to root for correct config loading\n",
-        "os.chdir(PROJECT_ROOT)\n",
-        "\n",
+        "# Import project modules\n",
         "from src.config import conf\n",
         "from src.constants import TORCH_DEVICE\n",
         "from src.dataloaders import load_graph\n",
         "from src.models import HGT\n",
         "\n",
-        "_logger.info(f\"Working from: {os.getcwd()}\")\n",
         "_logger.info(f\"Device: {TORCH_DEVICE}\")\n",
         "\n",
         "# Set plotting style\n",
@@ -558,13 +539,7 @@
         "# --- Filtering Step using InChIKey Overlap ---\n",
         "_logger.info(\"Filtering out hits that overlap with existing drugs (using InChIKeys)...\")\n",
         "\n",
-        "def get_inchi_key(smiles):\n",
-        "    if not isinstance(smiles, str): return None\n",
-        "    try:\n",
-        "        mol = Chem.MolFromSmiles(smiles)\n",
-        "        return Chem.MolToInchiKey(mol) if mol else None\n",
-        "    except:\n",
-        "        return None\n",
+        "# get_inchi_key is imported from utils\n",
         "\n",
         "# 1. Load existing drug smiles and get keys\n",
         "drug_smiles_df = pd.read_csv(drug_smiles_path)\n",
