--- a/notebooks/molecular_analysis/huntington_analysis.ipynb
+++ b/notebooks/molecular_analysis/huntington_analysis.ipynb
@@ -115,10 +115,6 @@
         }
       ],
       "source": [
-        "import logging\n",
-        "import os\n",
-        "import sys\n",
-        "from pathlib import Path\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import torch\n",
@@ -127,31 +123,17 @@
         "import seaborn as sns\n",
         "from tqdm import tqdm\n",
         "\n",
-        "# Setup logging\n",
-        "logging.basicConfig(level=logging.INFO, format=\"%(asctime)s - %(levelname)s - %(message)s\")\n",
-        "_logger = logging.getLogger(__name__)\n",
+        "# Setup environment using shared utilities\n",
+        "from utils import setup_notebook_environment, get_output_paths\n",
         "\n",
-        "# --- Path Setup ---\n",
-        "def _find_repo_root(start: Path) -> Path:\n",
-        "    start = start.resolve()\n",
-        "    for parent in (start, *start.parents):\n",
-        "        if (parent / \"pyproject.toml\").exists():\n",
-        "            return parent\n",
-        "    return start\n",
+        "PROJECT_ROOT, _logger = setup_notebook_environment(\"huntington_analysis\")\n",
         "\n",
-        "PROJECT_ROOT = _find_repo_root(Path.cwd())\n",
-        "if str(PROJECT_ROOT) not in sys.path:\n",
-        "    sys.path.insert(0, str(PROJECT_ROOT))\n",
-        "    \n",
-        "# Change working directory to root for correct config loading\n",
-        "os.chdir(PROJECT_ROOT)\n",
-        "\n",
+        "# Import project modules\n",
         "from src.config import conf\n",
         "from src.constants import TORCH_DEVICE\n",
         "from src.dataloaders import load_graph\n",
         "from src.models import HGT\n",
         "\n",
-        "_logger.info(f\"Working from: {os.getcwd()}\")\n",
         "_logger.info(f\"Device: {TORCH_DEVICE}\")\n",
         "\n",
         "# Set plotting style\n",
