--- a/notebooks/molecular_analysis/molecular_analysis.ipynb
+++ b/notebooks/molecular_analysis/molecular_analysis.ipynb
@@ -100,29 +100,9 @@
         }
       ],
       "source": [
-        "import logging\n",
-        "import os\n",
-        "import sys\n",
         "import time\n",
-        "from pathlib import Path\n",
+        "import copy\n",
         "\n",
-        "\n",
-        "def _find_repo_root(start: Path) -> Path:\n",
-        "    \"\"\"Find PROTON-GEM root by walking up to `pyproject.toml`.\"\"\"\n",
-        "    start = start.resolve()\n",
-        "    for parent in (start, *start.parents):\n",
-        "        if (parent / \"pyproject.toml\").exists():\n",
-        "            return parent\n",
-        "    return start\n",
-        "\n",
-        "\n",
-        "# Ensure all relative paths are resolved from the PROTON-GEM project root.\n",
-        "PROJECT_ROOT = _find_repo_root(Path.cwd())\n",
-        "os.chdir(PROJECT_ROOT)\n",
-        "if str(PROJECT_ROOT) not in sys.path:\n",
-        "    sys.path.insert(0, str(PROJECT_ROOT))\n",
-        "\n",
-        "import matplotlib.font_manager as fm\n",
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
         "import pandas as pd\n",
@@ -133,29 +113,20 @@
         "import torch.nn as nn\n",
         "import torch.nn.functional as F\n",
         "import wandb\n",
-        "import copy\n",
         "from sklearn.model_selection import train_test_split\n",
         "from torch.utils.data import DataLoader, TensorDataset\n",
         "from tqdm import tqdm\n",
         "\n",
+        "# Setup environment using shared utilities\n",
+        "from utils import setup_notebook_environment, get_output_paths\n",
+        "\n",
+        "PROJECT_ROOT, _logger = setup_notebook_environment(\"molecular_analysis\")\n",
+        "\n",
+        "# Import project modules\n",
         "from src.config import conf\n",
         "from src.constants import TORCH_DEVICE\n",
         "from src.dataloaders import load_graph\n",
-        "from src.models import HGT\n",
-        "\n",
-        "# Load environment variables from secrets.env\n",
-        "try:\n",
-        "    from dotenv import load_dotenv\n",
-        "except Exception:  # pragma: no cover\n",
-        "    load_dotenv = None\n",
-        "\n",
-        "if load_dotenv is not None:\n",
-        "    load_dotenv(conf.paths.secrets_path)\n",
-        "\n",
-        "if any(\"Arial\" in f.name for f in fm.fontManager.ttflist):\n",
-        "    plt.rcParams[\"font.family\"] = \"Arial\"\n",
-        "\n",
-        "_logger = logging.getLogger(__name__)"
+        "from src.models import HGT, MolecularAdapter"
       ]
     },
     {
@@ -172,13 +143,9 @@
       "outputs": [],
       "source": [
         "# Output directories (from config)\n",
-        "OUTPUT_DIR = conf.paths.notebooks.base_dir / conf.paths.notebooks.molecular_analysis.output_dir\n",
-        "OUTPUT_DIR.mkdir(parents=True, exist_ok=True)\n",
+        "OUTPUT_DIR, SMILES_CACHE_PATH, UNIMOL_CACHE_PATH, ADAPTER_PATH = get_output_paths()\n",
         "\n",
-        "# Cache file paths\n",
-        "SMILES_CACHE_PATH = conf.paths.kg.base_dir / conf.paths.kg.smiles_cache\n",
-        "UNIMOL_CACHE_PATH = OUTPUT_DIR / conf.paths.notebooks.molecular_analysis.unimol_cache\n",
-        "ADAPTER_PATH = conf.paths.checkpoint.base_dir / conf.paths.checkpoint.molecular_adapter"
+        "_logger.info(f\"Output Directory: {OUTPUT_DIR}\")"
       ]
     },
     {
@@ -9637,65 +9604,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "class MolecularAdapter(nn.Module):\n",
-        "    \"\"\"MLP adapter to map Uni-Mol2 molecular representations to PROTON embedding space.\n",
-        "\n",
-        "    Architecture: input -> Linear -> LayerNorm -> GELU -> Dropout -> ... -> output\n",
-        "    \"\"\"\n",
-        "\n",
-        "    def __init__(\n",
-        "        self,\n",
-        "        input_dim: int = 512,\n",
-        "        hidden_dim: int = 512,\n",
-        "        output_dim: int = 512,\n",
-        "        num_layers: int = 2,\n",
-        "        dropout: float = 0.1,\n",
-        "    ):\n",
-        "        \"\"\"Initialize the adapter.\n",
-        "\n",
-        "        Args:\n",
-        "            input_dim: Uni-Mol2 embedding dimension\n",
-        "            hidden_dim: Hidden layer dimension\n",
-        "            output_dim: PROTON embedding dimension\n",
-        "            num_layers: Number of hidden layers\n",
-        "            dropout: Dropout probability\n",
-        "        \"\"\"\n",
-        "        super().__init__()\n",
-        "\n",
-        "        layers = []\n",
-        "\n",
-        "        # Input layer\n",
-        "        layers.extend([\n",
-        "            nn.Linear(input_dim, hidden_dim),\n",
-        "            nn.LayerNorm(hidden_dim),\n",
-        "            nn.GELU(),\n",
-        "            nn.Dropout(dropout),\n",
-        "        ])\n",
-        "\n",
-        "        # Hidden layers\n",
-        "        for _ in range(num_layers - 1):\n",
-        "            layers.extend([\n",
-        "                nn.Linear(hidden_dim, hidden_dim),\n",
-        "                nn.LayerNorm(hidden_dim),\n",
-        "                nn.GELU(),\n",
-        "                nn.Dropout(dropout),\n",
-        "            ])\n",
-        "\n",
-        "        # Output layer\n",
-        "        layers.append(nn.Linear(hidden_dim, output_dim))\n",
-        "\n",
-        "        self.layers = nn.Sequential(*layers)\n",
-        "\n",
-        "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
-        "        \"\"\"Forward pass.\n",
-        "\n",
-        "        Args:\n",
-        "            x: Uni-Mol2 embeddings [batch, input_dim]\n",
-        "\n",
-        "        Returns:\n",
-        "            Projected embeddings [batch, output_dim]\n",
-        "        \"\"\"\n",
-        "        return self.layers(x)"
+        "# MolecularAdapter is imported from src.models\n",
+        "# See src/models/adapter.py for the class definition"
       ]
     },
     {
