--- a/notebooks/molecular_analysis/validation_analysis.ipynb
+++ b/notebooks/molecular_analysis/validation_analysis.ipynb
@@ -31,18 +31,10 @@
         }
       ],
       "source": [
-        "import logging\n",
-        "import os\n",
-        "import sys\n",
-        "from pathlib import Path\n",
-        "\n",
-        "import matplotlib.font_manager as fm\n",
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
         "import pandas as pd\n",
-        "import pytorch_lightning as pl\n",
         "import torch\n",
-        "import torch.nn as nn\n",
         "import torch.nn.functional as F\n",
         "import umap\n",
         "from tqdm.auto import tqdm\n",
@@ -50,42 +42,15 @@
         "from rdkit.Chem import Descriptors\n",
         "from rdkit.Chem.Scaffolds import MurckoScaffold\n",
         "\n",
-        "# Setup Logging\n",
-        "logging.basicConfig(level=logging.INFO)\n",
-        "_logger = logging.getLogger(\"molecular_analysis\")\n",
+        "# Setup environment using shared utilities\n",
+        "from utils import setup_notebook_environment, get_output_paths\n",
         "\n",
-        "def _find_repo_root(start: Path) -> Path:\n",
-        "    \"\"\"Find PROTON-GEM root by walking up to `pyproject.toml`.\"\"\"\n",
-        "    start = start.resolve()\n",
-        "    for parent in (start, *start.parents):\n",
-        "        if (parent / \"pyproject.toml\").exists():\n",
-        "            return parent\n",
-        "    return start\n",
-        "\n",
-        "# Set Project Root\n",
-        "current_path = Path.cwd()\n",
-        "PROJECT_ROOT = _find_repo_root(current_path)\n",
-        "os.chdir(PROJECT_ROOT)\n",
-        "if str(PROJECT_ROOT) not in sys.path:\n",
-        "    sys.path.insert(0, str(PROJECT_ROOT))\n",
-        "    \n",
-        "print(f\"Project Root: {PROJECT_ROOT}\")\n",
+        "PROJECT_ROOT, _logger = setup_notebook_environment(\"validation_analysis\")\n",
         "\n",
         "# Import project modules\n",
         "from src.config import conf\n",
         "from src.constants import TORCH_DEVICE\n",
-        "\n",
-        "# Load Secrets\n",
-        "try:\n",
-        "    from dotenv import load_dotenv\n",
-        "    if load_dotenv:\n",
-        "        load_dotenv(conf.paths.secrets_path)\n",
-        "except Exception as e:\n",
-        "    print(f\"Could not load dotenv: {e}\")\n",
-        "\n",
-        "# Matplotlib settings\n",
-        "if any(\"Arial\" in f.name for f in fm.fontManager.ttflist):\n",
-        "    plt.rcParams[\"font.family\"] = \"Arial\""
+        "from src.models import MolecularAdapter"
       ]
     },
     {
@@ -104,15 +69,10 @@
       ],
       "source": [
         "# Output directories (from config)\n",
-        "OUTPUT_DIR = conf.paths.notebooks.base_dir / conf.paths.notebooks.molecular_analysis.output_dir\n",
-        "OUTPUT_DIR.mkdir(parents=True, exist_ok=True)\n",
+        "OUTPUT_DIR, SMILES_CACHE_PATH, UNIMOL_CACHE_PATH, ADAPTER_PATH = get_output_paths()\n",
+        "UMAP_CACHE_PATH = OUTPUT_DIR / conf.paths.notebooks.molecular_analysis.umap_cache\n",
         "\n",
-        "# Cache file paths\n",
-        "SMILES_CACHE_PATH = conf.paths.kg.base_dir / conf.paths.kg.smiles_cache\n",
-        "UNIMOL_CACHE_PATH = OUTPUT_DIR / conf.paths.notebooks.molecular_analysis.unimol_cache\n",
-        "ADAPTER_PATH = conf.paths.checkpoint.base_dir / conf.paths.checkpoint.molecular_adapter\n",
-        "\n",
-        "print(f\"Output Directory: {OUTPUT_DIR}\")"
+        "_logger.info(f\"Output Directory: {OUTPUT_DIR}\")"
       ]
     },
     {
@@ -122,39 +82,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "class MolecularAdapter(nn.Module):\n",
-        "    \"\"\"MLP adapter to map Uni-Mol2 molecular representations to PROTON embedding space.\"\"\"\n",
-        "    def __init__(\n",
-        "        self,\n",
-        "        input_dim: int = 512,\n",
-        "        hidden_dim: int = 512,\n",
-        "        output_dim: int = 512,\n",
-        "        num_layers: int = 2,\n",
-        "        dropout: float = 0.1,\n",
-        "    ):\n",
-        "        super().__init__()\n",
-        "        layers = []\n",
-        "        # Input layer\n",
-        "        layers.extend([\n",
-        "            nn.Linear(input_dim, hidden_dim),\n",
-        "            nn.LayerNorm(hidden_dim),\n",
-        "            nn.GELU(),\n",
-        "            nn.Dropout(dropout),\n",
-        "        ])\n",
-        "        # Hidden layers\n",
-        "        for _ in range(num_layers - 1):\n",
-        "            layers.extend([\n",
-        "                nn.Linear(hidden_dim, hidden_dim),\n",
-        "                nn.LayerNorm(hidden_dim),\n",
-        "                nn.GELU(),\n",
-        "                nn.Dropout(dropout),\n",
-        "            ])\n",
-        "        # Output layer\n",
-        "        layers.append(nn.Linear(hidden_dim, output_dim))\n",
-        "        self.layers = nn.Sequential(*layers)\n",
-        "\n",
-        "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
-        "        return self.layers(x)"
+        "# MolecularAdapter is imported from src.models"
       ]
     },
     {
