--- a/notebooks/molecular_analysis/GBA1_ranking_analysis.ipynb
+++ b/notebooks/molecular_analysis/GBA1_ranking_analysis.ipynb
@@ -5902,15 +5902,16 @@
         }
       ],
       "source": [
-        "# --- RDKit fingerprints (Morgan generator, 256 bits) + Tanimoto similarity aggregates ---\n",
+        "# --- RDKit fingerprints (Morgan generator, 2048 bits) + Tanimoto similarity aggregates ---\n",
         "import math\n",
         "from rdkit import Chem, DataStructs\n",
         "from rdkit.Chem import rdFingerprintGenerator\n",
+        "from matplotlib.patches import Patch\n",
         "\n",
         "# -----------------------\n",
         "# Safe mol + Morgan generator fingerprint helpers (requested)\n",
         "FP_RADIUS = 2\n",
-        "FP_NBITS = 256\n",
+        "FP_NBITS = 2048\n",
         "NBINS = 50\n",
         "\n",
         "def mol_from_smiles_safe(smi):\n",
